--- a/about-us/index.html
+++ b/about-us/index.html
@@ -84,8 +84,8 @@ actions possible.</p>
 Yann Régis-Gianas served as teacher representative until December 2019.
 Alan Schmitt served as interim director from October 2022 until March 2023. He
 is now assistant for the foundation.</p>
-<p class="md-p">The OCaml Foundation logo and website were designed by <a href="https://bettystein.com" class="md-a">Bettina
-Steinbrecher</a>.</p>
+<p class="md-p">The OCaml Foundation logo and website were designed by <a href="https://bettyecker.at" class="md-a">Bettina
+Ecker</a>.</p>
 <h2 class="md-h2">On the legal side</h2>
 <p class="md-p">The OCaml Software Foundation (OCSF) is a sub-foundation of
 the <a href="https://www.inria.fr/" class="md-a">INRIA Foundation</a>. It is a charity/non-profit -- read our
